--- a/lessons/l03_variables_operators_types.ipynb
+++ b/lessons/l03_variables_operators_types.ipynb
@@ -120,6 +120,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 12341234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12341234\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,6 +221,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 12341234\n",
+    "b = 1234\n",
+    "c = 1\n",
+    "size = ['big', 'medium', 'small']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12341234 is a number that is really big\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a, 'is a number that is really', size[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way to do the same thing is to use what is called an f-string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12341234 is a number that is really big\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{a} is a number that is really {size[0]}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,6 +292,26 @@
     "|floor division | `//`|\n",
     "\n",
     "**Warning**: Do not use the `^` operator to raise to a power. That is actually the operator for bitwise XOR, which we will not cover in the bootcamp. Observe firey death if you use these inappropriately:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**3"
    ]
   },
   {
@@ -430,6 +531,26 @@
    "source": [
     "### Operations on floats\n",
     "Let's try floats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> <class 'float'> <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 2.2\n",
+    "c = a + b\n",
+    "print(type(a), type(b), type(c))"
    ]
   },
   {
