--- a/hw_solutions/hw_03_solutions.ipynb
+++ b/hw_solutions/hw_03_solutions.ipynb
@@ -168,6 +168,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = []\n",
+    "\n",
+    "for i in range(18, 8, -1):\n",
+    "    test_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[18, 17, 16, 15, 14, 13, 12, 11, 10, 9]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = [i for i in range(18, 8, -1) if i < 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -251,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +368,7 @@
        "'bteg'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +388,7 @@
        "'ewhj'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,6 +396,13 @@
    "source": [
     "caesar('asdf', shift_num=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
