--- a/hw_solutions/hw_02_solutions.ipynb
+++ b/hw_solutions/hw_02_solutions.ipynb
@@ -62,6 +62,7 @@
     "                return s1[i:i+substr_len]\n",
     "\n",
     "        substr_len -= 1\n",
+    "        \n",
     "\n",
     "    # If we haven't returned, there is no common substring\n",
     "    return ''"
@@ -72,6 +73,14 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "ACGT\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
