--- a/hw_solutions/hw_04_solutions.ipynb
+++ b/hw_solutions/hw_04_solutions.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is: 1\n",
+      "i is: 1\n",
+      "i is: 2\n",
+      "i is: 3\n",
+      "i is: 5\n",
+      "i is: 8\n",
+      "i is: 13\n",
+      "i is: 21\n",
+      "i is: 34\n",
+      "i is: 55\n",
+      "i is: 89\n"
+     ]
+    }
+   ],
    "source": [
     "aa = []\n",
     "\n",
     "for i in a:\n",
+    "    print('i is:', i)\n",
     "    if i not in aa:\n",
     "        aa.append(i)\n",
     "        \n",
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +185,7 @@
        "[1, 1, 2, 3, 5, 8, 13]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
